--- a/index.html
+++ b/index.html
@@ -1,134 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- required meta tags -->
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- title -->
-        <title>Modern Responsive Website</title>
-        <!-- favicon -->
-        <link rel="shortcut icon" href="img/favicon.ico">
-        <!-- google fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
-        <!-- font awesome -->
-        <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
-        <!-- bootstrap -->
-        <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-        <!-- animate -->
-        <link rel="stylesheet" href="css/animate/animate.css">
-        <!-- style CSS -->
-        <link rel="stylesheet" href="css/style.css">
 
-    </head>
-    <body>
-        <!-- Home -->
-        <section id="home">
-            <div id="home-cover" class="bg-parallax animated fadeIn">
-                <div id="home-content-box">
-                    <div id="home-content-box-inner" class="text-center">
-                        <div id="home-heading" class="animated zoomIn">
-                            <h3>Watch Out <br> The Modern Responsive Website!</h3>
+<head>
+    <!-- required meta tags -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- title -->
+    <title>Modern Responsive Website</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="img/favicon.ico">
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <!-- animate -->
+    <link rel="stylesheet" href="css/animate/animate.css">
+    <!-- style CSS -->
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+    <!-- Home -->
+    <section id="home">
+        <div id="home-cover" class="bg-parallax animated fadeIn">
+            <div id="home-content-box">
+                <div id="home-content-box-inner" class="text-center">
+                    <div id="home-heading" class="animated zoomIn">
+                        <h3>Watch Out <br> The Modern Responsive Website!</h3>
+                    </div>
+                    <div id="home-btn" class="animated zoomIn">
+                        <a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="View Our Work">View Our Work</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Services -->
+    <section id="services">
+        <div class="content-box">
+            <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
+                <h3> Services </h3>
+                <div class="content-title-underline"></div>
+            </div>
+            <div class="container">
+                <div class="row wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
+                    <div class="col-md-4">
+                        <div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-paint-brush fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>Web Design</h3>
+                            </div>
+                            <div class="service-item-description">
+                                <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
+                            </div>
                         </div>
-                        <div id="home-btn" class="animated zoomIn">
-                            <a class="btn btn-lg btn-general btn-white" href="#work" role="button" title="View Our Work">View Our Work</a>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-laptop fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>Web Development</h3>
+                            </div>
+                            <div class="service-item-description">
+                                <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-tablet fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>Mobile Apps</h3>
+                            </div>
+                            <div class="service-item-description">
+                                <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-search fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>SEO Optimization</h3>
+                            </div>
+                            <div class="service-item-description">
+                                <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-pencil-square-o fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>UX Design</h3>
+                            </div>
+                            <div class="service-item-description">
+                                <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="service-item">
+                            <div class="service-item-icon">
+                                <i class="fa fa-life-ring fa-3x"></i>
+                            </div>
+                            <div class="service-item-title">
+                                <h3>Support</h3>
+                            </div>
+                            <div class="service-item-description">
+                                <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- Services -->
-        <section id="services">
-            <div class="content-box">
-                <div class="content-title wow fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
-                    <h3> Services </h3>
-                    <div class="content-title-underline" ></div>
-                </div>
-                <div class="container">
-                    <div class="row wow fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
-                        <div class="col-md-4">
-                            <div class="service-item">
-                                <div class="service-item-icon">
-                                    <i class="fa fa-paint-brush fa-3x"></i>
+        </div>
+    </section>
+    <!-- About -->
+    <section id="about">
+        <div id="about-bg-diagonal" class="bg-parallax"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div id="about-content-box">
+                        <div id="about-content-box-outer">
+                            <div id="about-content-box-inner">
+                                <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
+                                    <h3> About Vesco </h3>
+                                    <div class="content-title-underline"></div>
                                 </div>
-                                <div class="service-item-title">
-                                    <h3>Web Design</h3>
+                                <div id="about-description" class="wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
+                                    <p>Excepteur sint reprehenderit dolor dolore laboris ad cillum laborum sunt. Amet aliqua
+                                        commodo tempor sit ad voluptate nisi Lorem cupidatat cillum veniam voluptate nulla
+                                        minim. Reprehenderit eu aliqua excepteur ex exercitation dolor. Deserunt ad sunt
+                                        cillum cupidatat est do Lorem et nulla velit deserunt eiusmod et. Officia deserunt
+                                        cupidatat anim ipsum elit amet velit ex magna incididunt anim deserunt nisi magna.
+                                        Ex anim est Lorem fugiat incididunt occaecat deserunt qui proident.</p>
                                 </div>
-                                <div class="service-item-description">
-                                    <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="service-item">
-                                <div class="service-item-icon">
-                                    <i class="fa fa-laptop fa-3x"></i>
-                                </div>
-                                <div class="service-item-title">
-                                    <h3>Web Development</h3>
-                                </div>
-                                <div class="service-item-description">
-                                    <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="service-item">
-                                <div class="service-item-icon">
-                                    <i class="fa fa-tablet fa-3x"></i>
-                                </div>
-                                <div class="service-item-title">
-                                    <h3>Mobile Apps</h3>
-                                </div>
-                                <div class="service-item-description">
-                                    <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="service-item">
-                                <div class="service-item-icon">
-                                    <i class="fa fa-search fa-3x"></i>
-                                </div>
-                                <div class="service-item-title">
-                                    <h3>SEO Optimization</h3>
-                                </div>
-                                <div class="service-item-description">
-                                    <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="service-item">
-                                <div class="service-item-icon">
-                                    <i class="fa fa-pencil-square-o fa-3x"></i>
-                                </div>
-                                <div class="service-item-title">
-                                    <h3>UX Design</h3>
-                                </div>
-                                <div class="service-item-description">
-                                    <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="service-item">
-                                <div class="service-item-icon">
-                                    <i class="fa fa-life-ring fa-3x"></i>
-                                </div>
-                                <div class="service-item-title">
-                                    <h3>Support</h3>
-                                </div>
-                                <div class="service-item-description">
-                                    <p>Non eiusmod Lorem elit aute id duis deserunt pariatur ad sint culpa deserunt.</p>
+                                <div id="about-btn" class="wow animated animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
+                                    <a class="btn btn-lg btn-general btn-blue" href="#work" role="button">Our Work</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- common js -->
-        <script src="bundle.js"></script>
-    </body>
+        </div>
+    </section>
+
+
+    <!-- common js -->
+    <script src="bundle.js"></script>
+</body>
+
 </html>
