--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <!-- animate -->
     <link rel="stylesheet" href="css/animate/animate.css">
+    <!-- magnific-popup -->
+    <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -143,7 +145,7 @@
                                     <h3> About Vesco </h3>
                                     <div class="content-title-underline"></div>
                                 </div>
-                                <div id="about-description" class="wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
+                                <div id="about-description" class="wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
                                     <p>Excepteur sint reprehenderit dolor dolore laboris ad cillum laborum sunt. Amet aliqua
                                         commodo tempor sit ad voluptate nisi Lorem cupidatat cillum veniam voluptate nulla
                                         minim. Reprehenderit eu aliqua excepteur ex exercitation dolor. Deserunt ad sunt
@@ -161,7 +163,75 @@
             </div>
         </div>
     </section>
-
+    <!-- Work -->
+    <section id="work">
+        <div class="content-box">
+            <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
+                <h3> Our Work </h3>
+                <div class="content-title-underline"></div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row no-gutters wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/1.jpg" title="Work Description Goes Here">
+                            <img class="img-responsive" src="img/work/1.jpg" alt="Work">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/2.jpg" title="Work Description Goes Here">
+                            <img class="img-responsive" src="img/work/2.jpg" alt="Work">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/3.jpg" title="Work Description Goes Here">
+                            <img class="img-responsive" src="img/work/3.jpg" alt="Work">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/4.jpg" title="Work Description Goes Here">
+                            <img class="img-responsive" src="img/work/4.jpg" alt="Work">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/5.jpg" title="Work Description Goes Here">
+                            <img class="img-responsive" src="img/work/5.jpg" alt="Work">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/6.jpg" title="Work Description Goes Here">
+                            <img class="img-responsive" src="img/work/6.jpg" alt="Work">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/7.jpg" title="Work Description Goes Here">
+                            <img class="img-responsive" src="img/work/7.jpg" alt="Work">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="img-wrapper">
+                        <a href="img/work/8.jpg" title="Work Description Goes Here">
+                            <img class="img-responsive" src="img/work/8.jpg" alt="Work">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- common js -->
     <script src="bundle.js"></script>
