--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="css/animate/animate.css">
     <!-- magnific-popup -->
     <link rel="stylesheet" href="css/magnific-popup/magnific-popup.css">
+    <!-- owl carousel -->
+    <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl-carousel/owl.theme.default.min.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -232,7 +235,143 @@
             </div>
         </div>
     </section>
-
+    <!-- Team -->
+    <section id="team">
+        <div class="content-box">
+            <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
+                <h3> Our Team </h3>
+                <div class="content-title-underline"></div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
+                <div class="col-md-12">
+                    <div id="team-members" class="owl-carousel owl-theme">
+                        <div class="team-member">
+                            <img src="img/team/team-1.jpg" class="img-responsive" alt="team member">
+                            <div class="team-member-info text-center">
+                                <h4 class="team-member-name">Daniel Waltrous</h4>
+                                <h4 class="team-member-designation">CEO</h4>
+                                <ul class="social-list">
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-twitter"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-google-plus"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team-member">
+                            <img src="img/team/team-2.jpg" class="img-responsive" alt="team member">
+                            <div class="team-member-info text-center">
+                                <h4 class="team-member-name">Sara Smith</h4>
+                                <h4 class="team-member-designation">Co-Founder</h4>
+                                <ul class="social-list">
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-twitter"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-google-plus"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team-member">
+                            <img src="img/team/team-3.jpg" class="img-responsive" alt="team member">
+                            <div class="team-member-info text-center">
+                                <h4 class="team-member-name">Steve Mike</h4>
+                                <h4 class="team-member-designation">Sr. Developer</h4>
+                                <ul class="social-list">
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-twitter"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-google-plus"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team-member">
+                            <img src="img/team/team-4.jpg" class="img-responsive" alt="team member">
+                            <div class="team-member-info text-center">
+                                <h4 class="team-member-name">Robert Hinay</h4>
+                                <h4 class="team-member-designation">Sr. Designer</h4>
+                                <ul class="social-list">
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-twitter"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-google-plus"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="team-member">
+                            <img src="img/team/team-5.jpg" class="img-responsive" alt="team member">
+                            <div class="team-member-info text-center">
+                                <h4 class="team-member-name">Mike Tera</h4>
+                                <h4 class="team-member-designation">Sales</h4>
+                                <ul class="social-list">
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-facebook"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-twitter"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="social-icon icon-gray">
+                                            <i class="fa fa-google-plus"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- common js -->
     <script src="bundle.js"></script>
 </body>
