--- a/index.html
+++ b/index.html
@@ -372,6 +372,64 @@
             </div>
         </div>
     </section>
+    <!-- Testimonials -->
+    <section id="testimonials">
+        <div id="testimonials-cover" class="bg-parallax">
+            <div class="content-box">
+                <div class="content-title content-title-white wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
+                    <h3> What Our Customers Say </h3>
+                    <div class="content-title-underline"></div>
+                </div>
+                <div class="container">
+                    <div class="row wow animated bounceInDown" data-wow-dration="1s" data-wow-delay=".5s">
+                        <div class="col-md-12">
+                            <div id="customers-testimonials" class="text-center owl-carousel owl-theme">
+                                <div class="testimonial">
+                                    <img src="img/client/client-1.jpg" class="img-responsive img-circle" alt="testimonial">
+                                    <blockquote class="text-center">
+                                        <p>Nisi sit est sint mollit do id laborum laborum nostrud. Dolore veniam ex qui irure
+                                            deserunt enim aute ea nostrud deserunt enim. Enim mollit magna elit ipsum.</p>
+                                    </blockquote>
+                                    <div class="testimonial-author">
+                                        <p>
+                                            <strong>Daniel Watrous</strong>
+                                            <span>CEO & Founder - Google</span>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="testimonial">
+                                    <img src="img/client/client-2.jpg" class="img-responsive img-circle" alt="testimonial">
+                                    <blockquote class="text-center">
+                                        <p>Nisi sit est sint mollit do id laborum laborum nostrud. Dolore veniam ex qui irure
+                                            deserunt enim aute ea nostrud deserunt enim. Enim mollit magna elit ipsum.</p>
+                                    </blockquote>
+                                    <div class="testimonial-author">
+                                        <p>
+                                            <strong>Johan Mathew</strong>
+                                            <span>CEO & Founder - Yahoo</span>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="testimonial">
+                                    <img src="img/client/client-3.jpg" class="img-responsive img-circle" alt="testimonial">
+                                    <blockquote class="text-center">
+                                        <p>Nisi sit est sint mollit do id laborum laborum nostrud. Dolore veniam ex qui irure
+                                            deserunt enim aute ea nostrud deserunt enim. Enim mollit magna elit ipsum.</p>
+                                    </blockquote>
+                                    <div class="testimonial-author">
+                                        <p>
+                                            <strong>Sara Smith</strong>
+                                            <span>CEO & Founder - Amazon</span>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- common js -->
     <script src="bundle.js"></script>
 </body>
