--- a/index.html
+++ b/index.html
@@ -430,6 +430,88 @@
             </div>
         </div>
     </section>
+    <!-- Pricing -->
+    <section id="pricing">
+        <div class="content-box">
+            <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
+                <h3> Our Pricing </h3>
+                <div class="content-title-underline"></div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 wow animated zoomIn" data-wow-dration="1s" data-wow-delay=".5s">
+                        <div class="pricing-box text-center">
+                            <h4 class="pricing-title">Basic</h4>
+                            <h3 class="pricing-value">49<sup>$</sup></h3>
+                            <ul class="pricing-spec">
+                                <li>
+                                    <p>500 Emails</p>
+                                </li>
+                                <li>
+                                    <p>5GB Disk Space</p>
+                                </li>
+                                <li>
+                                    <p>5GB Bandwidth</p>
+                                </li>
+                                <li>
+                                    <p>Unlimited Domains</p>
+                                </li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-blue" href="#" role="button">Purchase</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow animated bounceInUp" data-wow-dration="1s" data-wow-delay=".5s">
+                        <div class="pricing-box pricing-box-lg text-center">
+                            <h4 class="pricing-title">Enterprise</h4>
+                            <h3 class="pricing-value">89<sup>$</sup></h3>
+                            <ul class="pricing-spec">
+                                <li>
+                                    <p>500 Emails</p>
+                                </li>
+                                <li>
+                                    <p>5GB Disk Space</p>
+                                </li>
+                                <li>
+                                    <p>5GB Bandwidth</p>
+                                </li>
+                                <li>
+                                    <p>Unlimited Domains</p>
+                                </li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-white" href="#" role="button">Purchase</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow animated zoomIn" data-wow-dration="1s" data-wow-delay=".5s">
+                        <div class="pricing-box text-center">
+                            <h4 class="pricing-title">Standard</h4>
+                            <h3 class="pricing-value">69<sup>$</sup></h3>
+                            <ul class="pricing-spec">
+                                <li>
+                                    <p>500 Emails</p>
+                                </li>
+                                <li>
+                                    <p>5GB Disk Space</p>
+                                </li>
+                                <li>
+                                    <p>5GB Bandwidth</p>
+                                </li>
+                                <li>
+                                    <p>Unlimited Domains</p>
+                                </li>
+                            </ul>
+                            <div class="pricing-btn">
+                                <a class="btn btn-lg btn-general btn-blue" href="#" role="button">Purchase</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- common js -->
     <script src="bundle.js"></script>
 </body>
