--- a/index.html
+++ b/index.html
@@ -512,6 +512,61 @@
             </div>
         </div>
     </section>
+    <!-- Stats -->
+    <section id="stats">
+        <div id="stats-cover" class="bg-parallax">
+            <div class="content-box">
+                <div class="content-title content-title-white wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
+                    <h3> We Never Stop Improving </h3>
+                    <div class="content-title-underline"></div>
+                </div>
+                <div class="container">
+                    <div class="row wow animated bounceInLeft" data-wow-dration="1s" data-wow-delay=".5s">
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-cloud-download fa-5x"></i>
+                                <h2>
+                                    <span class="counter">1599</span>
+                                    <span>+</span>
+                                </h2>
+                                <p>Downloads</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-star-o fa-5x"></i>
+                                <h2>
+                                    <span class="counter">3500</span>
+                                    <span>+</span>
+                                </h2>
+                                <p>Awarsd</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-heart-o fa-5x"></i>
+                                <h2>
+                                    <span class="counter">1199</span>
+                                    <span>+</span>
+                                </h2>
+                                <p>Likes</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="stats-item">
+                                <i class="fa fa-check fa-5x"></i>
+                                <h2>
+                                    <span class="counter">2200</span>
+                                    <span>+</span>
+                                </h2>
+                                <p>Recomended</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- common js -->
     <script src="bundle.js"></script>
 </body>
