delete extra spaces

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div id="home-content-box">
                 <div id="home-content-box-inner" class="text-center">
                     <div id="home-heading" class="animated zoomIn">
-                        <h3>Watch Out <br> The Modern Responsive Website!</h3>
+                        <h3>Watch Out<br>The Modern Responsive Website!</h3>
                     </div>
                     <div id="home-btn" class="animated zoomIn">
                         <a class="btn btn-lg btn-general btn-white smooth-scroll" href="#work" role="button" title="View Our Work">View Our Work</a>
@@ -105,13 +105,13 @@
     <section id="services">
         <div class="content-box">
             <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
-                <h3> Services </h3>
+                <h3>Services</h3>
                 <div class="content-title-underline"></div>
             </div>
             <div class="container">
-                <div class="row wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
+                <div class="row">
                     <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
+                        <div class="service-item wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-paint-brush fa-3x"></i>
                             </div>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
+                        <div class="service-item wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-laptop fa-3x"></i>
                             </div>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
+                        <div class="service-item wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-tablet fa-3x"></i>
                             </div>
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
+                        <div class="service-item wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-search fa-3x"></i>
                             </div>
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
+                        <div class="service-item wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-pencil-square-o fa-3x"></i>
                             </div>
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
+                        <div class="service-item wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
                             <div class="service-item-icon">
                                 <i class="fa fa-life-ring fa-3x"></i>
                             </div>
@@ -202,7 +202,7 @@
                         <div id="about-content-box-outer">
                             <div id="about-content-box-inner">
                                 <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
-                                    <h3> About Vesco </h3>
+                                    <h3>About Vesco</h3>
                                     <div class="content-title-underline"></div>
                                 </div>
                                 <div id="about-description" class="wow animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
@@ -214,7 +214,7 @@
                                         Ex anim est Lorem fugiat incididunt occaecat deserunt qui proident.</p>
                                 </div>
                                 <div id="about-btn" class="wow animated animated fadeInUp" data-wow-dration="1s" data-wow-delay=".5s">
-                                    <a class="btn btn-lg btn-general btn-blue smooth-scroll" href="#work" role="button">Our Work</a>
+                                    <a class="btn btn-lg btn-general btn-blue smooth-scroll" href="#work" role="button" title="View Work">Our Work</a>
                                 </div>
                             </div>
                         </div>
@@ -227,7 +227,7 @@
     <section id="work">
         <div class="content-box">
             <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
-                <h3> Our Work </h3>
+                <h3>Our Work</h3>
                 <div class="content-title-underline"></div>
             </div>
             <div class="container-fluid">
@@ -296,7 +296,7 @@
     <section id="team">
         <div class="content-box">
             <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
-                <h3> Our Team </h3>
+                <h3>Our Team</h3>
                 <div class="content-title-underline"></div>
             </div>
             <div class="container">
@@ -434,7 +434,7 @@
         <div id="testimonials-cover" class="bg-parallax">
             <div class="content-box">
                 <div class="content-title content-title-white wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
-                    <h3> What Our Customers Say </h3>
+                    <h3>What Our Customers Say</h3>
                     <div class="content-title-underline"></div>
                 </div>
                 <div class="container">
@@ -491,7 +491,7 @@
     <section id="pricing">
         <div class="content-box">
             <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
-                <h3> Our Pricing </h3>
+                <h3>Our Pricing</h3>
                 <div class="content-title-underline"></div>
             </div>
             <div class="container">
@@ -574,7 +574,7 @@
         <div id="stats-cover" class="bg-parallax">
             <div class="content-box">
                 <div class="content-title content-title-white wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
-                    <h3> We Never Stop Improving </h3>
+                    <h3>We Never Stop Improving</h3>
                     <div class="content-title-underline"></div>
                 </div>
                 <div class="container">
@@ -628,7 +628,7 @@
     <section id="clients">
         <div class="content-box">
             <div class="content-title wow animated fadeInDown" data-wow-dration="1s" data-wow-delay=".5s">
-                <h3> Clients </h3>
+                <h3>Clients</h3>
                 <div class="content-title-underline"></div>
             </div>
             <div class="container">
@@ -730,7 +730,7 @@
         <div id="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-xs-9">
+                    <div class="col-md-6">
                         <div id="footer-copyrights">
                             <p>Copyrights &copy; 2017 All Rights Reserved by Vesco Inc.</p>
                         </div>
@@ -768,7 +768,7 @@
                 </div>
             </div>
         </div>
-        <a id="back-to-top" class="btn btn-sm btn-blue btn-back-to-top smooth-scroll" href="#home" role="button" title="home">
+        <a id="back-to-top" class="btn btn-sm btn-blue btn-back-to-top smooth-scroll hidden-sm hidden-xs" href="#home" role="button" title="home">
             <i class="fa fa-angle-up"></i>
         </a>
     </footer>
