--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <!-- required meta tags -->
@@ -34,7 +34,7 @@
 
 <body data-spy="scroll" data-target=".navbar-fixed-top" data-offset="65">
     <header>
-        <nav class="navbar navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-fixed-top">
             <div class="container-fluid">
                 <div class="vesco-nav-wrapper">
                     <div class="navbar-header">
